no functional change, just cleaning warnings